--- a/index.html
+++ b/index.html
@@ -3,20 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resume</title>
+    <title>My portfolio</title>
+    <!-- external css -->
     <link rel="stylesheet" href="style.css">
+
+    <!-- font awesome cdn -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js">
 </head>
 <body>
+    <!-- header part start -->
+    
     <div class="print-area">
         <div class="header">
-            <img src="./img/img-1.jpg" alt="">
+            <img src="./img/IMG_20190425_145216-01.jpeg" alt="">
             <div class="header-text">
                 <h1>SABBIR AHMMED</h1>
-                <p>Graphic & Web Designer</p>
+                <p>Graphic & Web Developer</p>
             </div>
         </div>
+
+        <!-- header part end -->
 
         <div class="content">
             <div class="left-area">
@@ -128,17 +134,9 @@
         </div>
      </div>
  <div class="sabbir">
-     <button>PRINT CV</button>
+     <button >PRINT CV</button>
  </div>
    
-  <script src="all.min.js"></script>  
 
-
-  <script>
-      var btn = document.querySelector("button");
-      btn.onclick = () =>{
-          windows.print();
-      }
-  </script>
 </body>
 </html>
